--- a/tmpl/_accounts.html
+++ b/tmpl/_accounts.html
@@ -90,7 +90,7 @@
                         <ul class="DropdownMenu__MenuList-sc-10qdpp4-1 bHunYy">
                             <li
                                     class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hHWLlX">
-                                <a data-savepage-href="/settings" href="/settings"
+                                <a data-savepage-href="/settings" href="https://www.coinbase.com/settings"
                                    class="Link__ARouterLink-eh4rrz-1 besQkt ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate" weight="inherit">
                                     <p
@@ -118,7 +118,7 @@
                                 </a></li>
                             <li
                                     class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hHWLlX">
-                                <a data-savepage-href="/reports" href="/reports"
+                                <a data-savepage-href="/reports" href="https://www.coinbase.com/reports"
                                    class="Link__ARouterLink-eh4rrz-1 besQkt ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate" weight="inherit">
                                     <p
@@ -137,7 +137,7 @@
                             <li
                                     class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hgrPxy">
                                 <a data-testid="sign-out-dropdown-link" data-savepage-href="/signout"
-                                   href="/signout"
+                                   href="https://www.coinbase.com/signout"
                                    class="Link__A-eh4rrz-0 fJjiqr ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate">
                                     <p
@@ -831,12 +831,12 @@
     <div class="Flex-l69ttv-0 Footer__Wrapper-sc-1esv9sa-3 kFNmWq">
         <div class="Flex-l69ttv-0 Footer__Content-sc-1esv9sa-4 iKTXYX">
             <div class="Flex-l69ttv-0 Footer__Links-sc-1esv9sa-0 eTMRAi"><a data-savepage-href="/home"
-                                                                            href="/home"
+                                                                            href="https://www.coinbase.com/home"
                                                                             class="Footer__Link-sc-1esv9sa-7 jcAPoi">Home</a><a
-                        data-savepage-href="/careers" href="/careers"
+                        data-savepage-href="/careers" href="https://www.coinbase.com/careers"
                         class="Footer__Link-sc-1esv9sa-7 jcAPoi">Careers</a><a
                         data-savepage-href="/legal/user_agreement"
-                        href="/legal/user_agreement"
+                        href="https://www.coinbase.com/legal/user_agreement"
                         class="Footer__Link-sc-1esv9sa-7 jcAPoi">Legal &amp; Privacy</a>
                 <div class="Footer__CopyrightLeft-sc-1esv9sa-5 dQjaQK">© 2021 Coinbase</div>
             </div>
