--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -80,7 +80,7 @@
                         </div>
                         <ul class="DropdownMenu__MenuList-sc-10qdpp4-1 bHunYy">
                             <li class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hHWLlX">
-                                <a data-savepage-href="/settings" href="/settings"
+                                <a data-savepage-href="/settings" href="https://www.coinbase.com/settings"
                                    class="Link__ARouterLink-eh4rrz-1 besQkt ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate" weight="inherit">
                                     <p class="TextElement__Spacer-hxkcw5-0 cicsNy Body__StyledBody-sc-17wx6cn-0 kzupAr ProfileRowItem__StyledBody-sc-1mo84dm-0 cUozCT">
@@ -105,7 +105,7 @@
                                 </a>
                             </li>
                             <li class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hHWLlX">
-                                <a data-savepage-href="/reports" href="/reports"
+                                <a data-savepage-href="/reports" href="https://www.coinbase.com/reports"
                                    class="Link__ARouterLink-eh4rrz-1 besQkt ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate" weight="inherit">
                                     <p class="TextElement__Spacer-hxkcw5-0 cicsNy Body__StyledBody-sc-17wx6cn-0 kzupAr ProfileRowItem__StyledBody-sc-1mo84dm-0 cUozCT">
@@ -121,7 +121,7 @@
                                 </a>
                             </li>
                             <li class="ProfileRowItem__NavigationListItem-sc-1mo84dm-1 cdGUBP DropdownMenu__StyledProfileRowItem-sc-10qdpp4-5 hgrPxy">
-                                <a data-testid="sign-out-dropdown-link" data-savepage-href="/signout" href="/signout"
+                                <a data-testid="sign-out-dropdown-link" data-savepage-href="/signout" href="https://www.coinbase.com/signout"
                                    class="Link__A-eh4rrz-0 fJjiqr ProfileRowItem__StyledLink-sc-1mo84dm-2 hGmuxg"
                                    color="slate">
                                     <p class="TextElement__Spacer-hxkcw5-0 cicsNy Body__StyledBody-sc-17wx6cn-0 kzupAr ProfileRowItem__StyledBody-sc-1mo84dm-0 cUozCT">
@@ -831,7 +831,7 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a>
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://bitcoinmagazine.com/business/turkey-inflation-why-we-need-bitcoin"
@@ -894,7 +894,7 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a>
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://bitcoinmagazine.com/markets/bitcoin-long-term-holder-short-term-holder-cost-basis-ratio"
@@ -959,12 +959,12 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a><a
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a><a
                                                                                                     color="rgba(10,11,13,1)"
                                                                                                     weight="demiBold"
                                                                                                     class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 gRTVHp"
                                                                                                     data-savepage-href="/price/avalanche"
-                                                                                                    href="/price/avalanche">Avalanche</a>
+                                                                                                    href="https://www.coinbase.com/price/avalanche">Avalanche</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://blockworks.co/avax-rallies-btc-nears-ath-in-turkish-lira-markets-wrap/"
@@ -1025,7 +1025,7 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a>
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://bitcoinmagazine.com/markets/paraguays-bitcoin-bill-passes-the-senate"
@@ -1086,7 +1086,7 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a>
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://decrypt.co/88635/sec-delays-decisions-two-more-bitcoin-etfs?&amp;utm_medium=referral&amp;utm_campaign=feed&amp;utm_source=coinbase"
@@ -1149,7 +1149,7 @@
                                                                                                    weight="demiBold"
                                                                                                    class="Link__ARouterLink-eh4rrz-1 imjQlJ AssetLink__StyledLink-sc-1jfam56-0 kWwTAo"
                                                                                                    data-savepage-href="/price/bitcoin"
-                                                                                                   href="/price/bitcoin">Bitcoin</a>
+                                                                                                   href="https://www.coinbase.com/price/bitcoin">Bitcoin</a>
                                                                                         </div>
                                                                                     </div>
                                                                                     <a href="https://bitcoinmagazine.com/markets/millennial-millionaires-own-bitcoin-and-want-more"
@@ -2404,10 +2404,10 @@
         </div>
         <div class="Flex-l69ttv-0 Footer__Wrapper-sc-1esv9sa-3 kFNmWq">
             <div class="Flex-l69ttv-0 Footer__Content-sc-1esv9sa-4 iKTXYX">
-                <div class="Flex-l69ttv-0 Footer__Links-sc-1esv9sa-0 eTMRAi"><a data-savepage-href="/home" href="/home"
+                <div class="Flex-l69ttv-0 Footer__Links-sc-1esv9sa-0 eTMRAi"><a data-savepage-href="/home" href="https://www.coinbase.com/home"
                                                                                 class="Footer__Link-sc-1esv9sa-7 jcAPoi">Home</a><a
-                            data-savepage-href="/careers" href="/careers" class="Footer__Link-sc-1esv9sa-7 jcAPoi">Careers</a><a
-                            data-savepage-href="/legal/user_agreement" href="/legal/user_agreement"
+                            data-savepage-href="/careers" href="https://www.coinbase.com/careers" class="Footer__Link-sc-1esv9sa-7 jcAPoi">Careers</a><a
+                            data-savepage-href="/legal/user_agreement" href="https://www.coinbase.com/legal/user_agreement"
                             class="Footer__Link-sc-1esv9sa-7 jcAPoi">Legal &amp; Privacy</a>
                     <div class="Footer__CopyrightLeft-sc-1esv9sa-5 dQjaQK">© 2021 Coinbase</div>
                 </div>
