--- a/tmpl/build.html
+++ b/tmpl/build.html
@@ -146,6 +146,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-3 col-sm-12">
+                        <label class="form-label">Theme mode</label>
+                    </div>
+                    <div class="col-9 col-sm-12">
+                        <div class="input-group">
+                            <label class="form-switch">
+                                <input type="checkbox" name="account_coin_dark"{{ if .Account.CoinDark }} checked{{ end }}>
+                                <i class="form-icon"></i> Dark mode
+                            </label>
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="form-group">
