--- a/tmpl/build.html
+++ b/tmpl/build.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-3 col-sm-12">
-                        <label class="form-label">Theme mode</label>
+                        <label class="form-label">Coinbase theme mode</label>
                     </div>
                     <div class="col-9 col-sm-12">
                         <div class="input-group">
