--- a/tmpl/summary.html
+++ b/tmpl/summary.html
@@ -913,7 +913,7 @@
                                                     class="ppvx_d-table-cell cw_tile-itemListCol"><span
                                                         class="ppvx_text--md cw_tile-itemListHeader test_bankCard-itemListHeader"
                                                         data-test-id="bankCard-itemListHeader">{{ .Account.Bank }}</span><span
-                                                        class="ppvx_text--sm">Checking {{ $bank.Number }}</span></span></span></a>
+                                                        class="ppvx_text--sm">Checking ••••{{ .Account.BankAccount }}</span></span></span></a>
                                 </li>
                                 {{ range $bank.Products }}
                                     <li class="cw_tile-itemListContainer  cw_tile__bankcard-cardRowItem ppvx_d-inline-block">
