--- a/tmpl/build.html
+++ b/tmpl/build.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="col-9 col-sm-12">
                         <div class="input-group">
-                            <input class="form-input" type="text" name="account_bank_account" id="input-account-name" placeholder="First name Last name" value="{{ .Account.BankAccount }}">
+                            <input class="form-input" type="text" name="account_bank_account" id="input-account-name" placeholder="9999" value="{{ .Account.BankAccount }}">
                         </div>
                     </div>
                 </div>
