--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -249,7 +249,7 @@
                                                                             <div class="Flex-l69ttv-0 PriceTickerChar__Container-sc-1q68ya3-0 dgxbSY">
                                                                               <div class="PriceTickerChar__Values-sc-1q68ya3-1 ktZMTF">
                                                                                 <div class="Flex-l69ttv-0 PriceTickerChar__ValueContainer-sc-1q68ya3-2 WBuZA"
-                                                                                     id="trade_value_int">42,157</div>
+                                                                                     id="trade_value_int"></div>
                                                                               </div>
                                                                             </div>
                                                                           </div>
@@ -259,7 +259,7 @@
                                                                                class="Flex-l69ttv-0 PriceTicker__PriceTickerContainer-sc-1h9whzt-0 jpOQuc">
                                                                             <div class="Flex-l69ttv-0 PriceTickerChar__Container-sc-1q68ya3-0 dgxbSY">
                                                                               <div class="PriceTickerChar__Values-sc-1q68ya3-1 ktZMTF">
-                                                                                <div class="Flex-l69ttv-0 PriceTickerChar__ValueContainer-sc-1q68ya3-2 WBuZA" id="trade_value_decimal">99</div>
+                                                                                <div class="Flex-l69ttv-0 PriceTickerChar__ValueContainer-sc-1q68ya3-2 WBuZA" id="trade_value_decimal"></div>
                                                                               </div>
                                                                             </div>
                                                                           </div>
