--- a/tmpl/coinbase.html
+++ b/tmpl/coinbase.html
@@ -94,7 +94,8 @@
 <div class="Overlay__OverlayContent-sc-1jqn7b1-0 kdXwUD"></div>
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="/public/js/odo.js"></script>
+<script src="/public/js/zepto.min.js"></script>
+<script src="/public/js/rotate-number.min.js"></script>
 <script src="/public/js/moment.min.js"></script>
 <script src="/public/js/echarts.min.js"></script>
 <script src="/public/js/vue.js"></script>
