--- a/tmpl/_accounts.html
+++ b/tmpl/_accounts.html
@@ -282,7 +282,7 @@
 
 
 
-                                                                                        <div role="button" v-for="item in revChartData" @click="open(item)" aria-label="[[moment(item.Date).format('MMM DD, YYYY')]] transaction details" tabindex="0" class="Flex-l69ttv-0 cardStyles__CardRow-wgcfkc-0 GQLTransactionListItem__LinkContainer-sc-1994j27-0 dYXkhd">
+                                                                                        <div role="button" v-for="item in revChartData" @click="open(item)" :aria-label="$moment(item.Date).format('MMM DD, YYYY') + ' transaction details'" tabindex="0" class="Flex-l69ttv-0 cardStyles__CardRow-wgcfkc-0 GQLTransactionListItem__LinkContainer-sc-1994j27-0 dYXkhd">
                                                                                             <div class="Flex-l69ttv-0 GQLTransactionListItem__NameContainer-sc-1994j27-1 ldZukT">
                                                                                                 <div class="Flex-l69ttv-0 styles__DateContainer-sc-193ww2v-0 dCBDnV">
                                                                                                     <span class="TextElement__Spacer-hxkcw5-0 cicsNy Caps__StyledUppercase-sc-1m9jrwx-0 csSEWt">[[ $moment(item.Date).format("MMM")]]</span>
@@ -752,7 +752,7 @@
 
 
 
-        <div v-if="transactionOpen" class="cds-large-l12sl86x cds-light-lilshph Modal__StyledModal-n8nl4a-0 bXwCzE">
+        <div v-if="transactionOpen" class="cds-large-l12sl86x Modal__StyledModal-n8nl4a-0 bXwCzE" :class="[modeClass]">
             <div class="Modal__StyledModal-n8nl4a-0 bXwCzE__overlay Modal__StyledModal-n8nl4a-0" :class="modalOpened ? 'bXwCzE__overlay--after-open' : ''">
                 <div class="ReactModal__Content ReactModal__Content--after-open Modal__StyledModal-n8nl4a-0 bXwCzE__content" tabindex="-1" role="dialog" aria-label="modal" aria-modal="true" style="--foreground:rgb(var(--gray100)); --foreground-muted:rgb(var(--gray60)); --background:rgb(var(--gray0)); --background-alternate:rgb(var(--gray5)); --background-overlay:rgba(var(--gray80),0.33); --line:rgba(var(--gray60),0.2); --line-heavy:rgba(var(--gray60),0.66); --primary:rgb(var(--blue60)); --primary-wash:rgb(var(--blue0)); --primary-foreground:rgb(var(--gray0)); --negative:rgb(var(--red60)); --negative-foreground:rgb(var(--gray0)); --positive:rgb(var(--green60)); --positive-foreground:rgb(var(--gray0)); --secondary:rgb(var(--gray0)); --secondary-foreground:rgb(var(--gray100));">
                     <div data-testid="transaction-modal-container" class="Flex-l69ttv-0 GQLTransactionModal__Container-kdoj8v-0 iJNVzr">
