--- a/tmpl/_layout.html
+++ b/tmpl/_layout.html
@@ -1,5 +1,5 @@
 <script type="text/x-template" id="tmpl-layout">
-    <div class="Flex-l69ttv-0 kNzJnP cds-large-l12sl86x cds-light-lilshph" style="--foreground:rgb(var(--gray100)); --foreground-muted:rgb(var(--gray60)); --background:rgb(var(--gray0)); --background-alternate:rgb(var(--gray5)); --background-overlay:rgba(var(--gray80),0.33); --line:rgba(var(--gray60),0.2); --line-heavy:rgba(var(--gray60),0.66); --primary:rgb(var(--blue60)); --primary-wash:rgb(var(--blue0)); --primary-foreground:rgb(var(--gray0)); --negative:rgb(var(--red60)); --negative-foreground:rgb(var(--gray0)); --positive:rgb(var(--green60)); --positive-foreground:rgb(var(--gray0)); --secondary:rgb(var(--gray0)); --secondary-foreground:rgb(var(--gray100));">
+    <div class="Flex-l69ttv-0 kNzJnP cds-large-l12sl86x" :class="[modeClass]" style="--foreground:rgb(var(--gray100)); --foreground-muted:rgb(var(--gray60)); --background:rgb(var(--gray0)); --background-alternate:rgb(var(--gray5)); --background-overlay:rgba(var(--gray80),0.33); --line:rgba(var(--gray60),0.2); --line-heavy:rgba(var(--gray60),0.66); --primary:rgb(var(--blue60)); --primary-wash:rgb(var(--blue0)); --primary-foreground:rgb(var(--gray0)); --negative:rgb(var(--red60)); --negative-foreground:rgb(var(--gray0)); --positive:rgb(var(--green60)); --positive-foreground:rgb(var(--gray0)); --secondary:rgb(var(--gray0)); --secondary-foreground:rgb(var(--gray100));">
         <div class="Transitioner__Container-sc-1nlar1d-0 fmqQye" style="">
             <div data-testid="step-loaded-active" direction="right" fill="1"
                  class="moduleFade__Frame-sc-53f9yi-0 eCGjpA">
@@ -15,7 +15,7 @@
                                             <c-menu></c-menu>
                                         </div>
                                     </div>
-                                    <router-view :account="account"></router-view>
+                                    <router-view :account="account" :modeClass="modeClass"></router-view>
                                     <div class="Backdrop__LayoutBackdrop-sc-1xjhtm5-0 eFThaY"></div>
                                 </div>
                             </div>
