--- a/tmpl/transactions.html
+++ b/tmpl/transactions.html
@@ -620,7 +620,7 @@
                                                             <h4 class="accessAid">
                                                                 <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                     <span class="ppvx_col-7 counterparty">
-                                                                        <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                        <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                     </span>
                                                                     <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                         <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
@@ -646,7 +646,7 @@
                                                                          class=" transactionDescriptionContainer js_transactionDescriptionContainer">
                                                                         <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                             <span class="ppvx_col-7 counterparty">
-                                                                                <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                                <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                             </span>
                                                                             <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                                 <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
@@ -675,7 +675,7 @@
                                                                     <span id="js_spinnerLabelText-5YX357455S5907308" aria-hidden="true" class="accessAid">Loading transaction details for
                                                                         <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                             <span class="ppvx_col-7 counterparty">
-                                                                                <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                                <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                             </span>
                                                                             <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                                 <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
@@ -740,7 +740,7 @@
                                                         <h4 class="accessAid">
                                                             <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                 <span class="ppvx_col-7 counterparty">
-                                                                    <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                    <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                 </span>
                                                                 <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                     <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
@@ -767,7 +767,7 @@
                                                                      class=" transactionDescriptionContainer js_transactionDescriptionContainer">
                                                                     <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                         <span class="ppvx_col-7 counterparty">
-                                                                            <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                            <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                         </span>
                                                                         <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                             <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
@@ -789,7 +789,7 @@
                                                                 <span id="js_spinnerLabelText-5YX357455S5907308" aria-hidden="true" class="accessAid">Loading transaction details for
                                                                     <div class="ppvx_row ppvx_no-gutters transactionDescription ppvx_text--body" dir="auto">
                                                                         <span class="ppvx_col-7 counterparty">
-                                                                            <span class="ppvx_text--body-strong counterparty-text">{{ .Name }}</span>
+                                                                            <span class="ppvx_text--body-strong counterparty-text">eBay - {{ .Name }}</span>
                                                                         </span>
                                                                         <div id="txnAmountAndCurrency-5YX357455S5907308" class="ppvx_col-5 transactionAmount js_transactionDescriptionLink " data-href="/myaccount/transactions/details/5YX357455S5907308">
                                                                             <span aria-hidden="true" class="{{ if .IsPositive }}isPositive {{ end }}ppvx_text--body-strong">{{ if .IsPositive }}+{{ else }}-{{ end }}</span>
