--- a/tmpl/gm_load.html
+++ b/tmpl/gm_load.html
@@ -89500,8 +89500,8 @@
         <div class="gb_9d">
             <div class="gb_be">
                 <div>Google Account</div>
-                <div class="gb_pb">Evgeny Koltsov</div>
-                <div>jetapahob@gmail.com</div>
+                <div class="gb_pb"></div>
+                <div></div>
             </div>
         </div>
         <div class="gb_zc">Main menu</div>
