--- a/tmpl/eb_overview.html
+++ b/tmpl/eb_overview.html
@@ -12108,7 +12108,7 @@
                                                             "text": "Ship it out to "
                                                         }, {
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak",
+                                                            "text": "",
                                                             "styles": ["BOLD"]
                                                         }, {
                                                             "_type": "TextSpan",
@@ -12124,7 +12124,7 @@
                                                         "_type": "TextualDisplay",
                                                         "textSpans": [{
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak"
+                                                            "text": ""
                                                         }, {"_type": "TextSpan", "text": ", "}, {
                                                             "_type": "TextSpan",
                                                             "text": "NY"
@@ -12513,7 +12513,7 @@
                                                             "text": "Ship it out to "
                                                         }, {
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak",
+                                                            "text": "",
                                                             "styles": ["BOLD"]
                                                         }, {
                                                             "_type": "TextSpan",
@@ -12529,10 +12529,10 @@
                                                         "_type": "TextualDisplay",
                                                         "textSpans": [{
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak"
+                                                            "text": ""
                                                         }, {"_type": "TextSpan", "text": ", "}, {
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak"
+                                                            "text": ""
                                                         }]
                                                     }
                                                 }
@@ -12918,7 +12918,7 @@
                                                             "text": "Ship it out to "
                                                         }, {
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak",
+                                                            "text": "",
                                                             "styles": ["BOLD"]
                                                         }, {
                                                             "_type": "TextSpan",
@@ -12937,7 +12937,7 @@
                                                             "text": "Bronx"
                                                         }, {"_type": "TextSpan", "text": ", "}, {
                                                             "_type": "TextSpan",
-                                                            "text": "Ivan Shkurak"
+                                                            "text": ""
                                                         }]
                                                     }
                                                 }
